--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "clear": "docusaurus clear",
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
-    "write-heading-ids": "docusaurus write-heading-ids"
+    "write-heading-ids": "docusaurus write-heading-ids",
+    "gh-deploy": "sudo GIT_USER=esaba12 npm run deploy"
+    
   },
   "dependencies": {
     "@docusaurus/core": "2.4.1",
